# CDC_drone

ibvs_nftasmc/: CMakeLists.txt  package.xml
ibvs_nftasmc/launch/: broadcaster.launch  broadcaster_VICON.launch  sim.launch  sim_VICON.launch  spawn_arucoTarget.launch  spawn_uav.launch
ibvs_nftasmc/models/Aruco_Target/: model.sdf
ibvs_nftasmc/models/F450/: model.sdf
ibvs_nftasmc/src/: attitude_nftasmc.cpp  attitude_nftasmc_VICON.cpp  dist_vector.csv  disturbances.cpp  disturbances.csv  ibvs_pos_ctrl.cpp  ibvs_pos_ctrl_VICON.cpp  image_features.cpp  quad_gazebo_broadcaster.cpp  target_gazebo_broadcaster.cpp  target_position.cpp  uav_dynamics.cpp  wind_moderate_vector.csv  wind_severe_vector.csv
